--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
@@ -38,12 +49,15 @@ dependencies {
     endpointsServer project(path: ':backend', configuration: 'endpoints')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.google.android.gms:play-services-ads:17.1.2'
-    implementation 'com.google.api-client:google-api-client:1.23.0'
-    implementation 'com.google.http-client:google-http-client-android:1.23.0'
+    implementation 'com.google.api-client:google-api-client:1.25.0'
+    // https://mvnrepository.com/artifact/com.google.http-client/google-http-client-android
+    implementation 'com.google.http-client:google-http-client-android:1.28.0'
+
+    implementation 'com.google.http-client:google-http-client:1.28.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
-    implementation project(':javaJokes')
     implementation project(':androidjokes')
+    implementation project(':backend')
 
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
