--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -27,7 +27,11 @@ dependencies {
     implementation 'com.google.endpoints:endpoints-framework:2.0.9'
     implementation 'javax.inject:javax.inject:1'
 
+    implementation project(':javaJokes')
+
     implementation 'javax.servlet:servlet-api:2.5'
-    implementation 'com.google.api-client:google-api-client:1.23.0'
-    implementation 'com.google.http-client:google-http-client-android:1.23.0'
+    implementation 'com.google.api-client:google-api-client:1.25.0'
+    // https://mvnrepository.com/artifact/com.google.http-client/google-http-client-android
+    implementation 'com.google.http-client:google-http-client-android:1.28.0'
+
 }
