--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    // https://mvnrepository.com/artifact/org.mockito/mockito-core
+    androidTestImplementation 'org.mockito:mockito-core:2.23.4'
 
     testImplementation 'junit:junit:4.12'
 }
