Attempting to complete Optional Step: Configure Test Task

--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,7 @@ allprojects {
         google()
     }
 }
+
+task testTask(type: GradleBuild) {
+    tasks = ['appEngineStart', 'check', 'appEngineStop']
+}
