--- a/build.gradle
+++ b/build.gradle
@@ -22,5 +22,5 @@ allprojects {
 }
 
 task testTask(type: GradleBuild) {
-    tasks = ['appEngineStart', 'check', 'appEngineStop']
+    tasks = ['appEngineStart', 'test', 'appEngineStop']
 }
